fix color picker, some dark mode styles

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -58,3 +58,9 @@
   }
 
 }
+
+:host-context(.dark) {
+  .footer {
+    background-color: #0c0c0c;
+  }
+}
