--- a/src/app/header-ui/header-ui.component.scss
+++ b/src/app/header-ui/header-ui.component.scss
@@ -115,3 +115,9 @@
   }
 
 }
+
+:host-context(.dark) {
+  .info-tag p {
+    color: black;
+  }
+}
