--- a/src/app/project/components/project-info/project-info.component.scss
+++ b/src/app/project/components/project-info/project-info.component.scss
@@ -3,7 +3,7 @@
 
 .project-info {
   margin-left: 50px;
-  max-width: 260px;
+  width: 260px;
 }
 
 .info-head {
